@@ -1,4 +1,9 @@
-2007-11-06  Ingo Feinerer  <feinerer@logic.at>
+2007-11-18  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/stopwords.R (stopwords): Look up .dat files at every
+	call. Allows users to modify stopword .dat files interactively.
+
+2007-11-06  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* R/termdocmatrix.R (termFreq): Correct processing of empty
 	documents.
